--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 	box-sizing: border-box;
 }
 body {
+	background-color: #f9f9f9;
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
