--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -32,3 +32,23 @@
 	padding-right: 0.5rem;
 	cursor: pointer;
 }
+.selectContainer {
+	background-color: #fff;
+	width: 12rem;
+	height: 3rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	gap: 1rem;
+	box-shadow: 0 2px 7px 2px #a2a2a2;
+	border-radius: 0.3rem;
+}
+.select {
+	flex: 1;
+	height: 100%;
+	border: none;
+	outline: none;
+	padding-left: 0.5rem;
+	font-size: 1.1rem;
+	border-radius: inherit;
+}
