--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -3,9 +3,14 @@
     background-color: white;
     box-shadow: 0 1px 3px -2px #e27c73;
     border-radius: 5px;
-    width: 380px;
+    width: 340px;
     margin: 10px;
-    padding: 10px;
-    text-align: center;
+    /* padding: 10px; */
+    text-align: left;
   }
   
+  .image{
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+  }
