--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,16 +1,15 @@
 .card {
-    border: 1px solid #ee8c83;
     background-color: white;
-    box-shadow: 0 1px 3px -2px #e27c73;
+    box-shadow: 0 1px 5px -2px #a1a1a1;
     border-radius: 5px;
     width: 340px;
     margin: 10px;
-    /* padding: 10px; */
+    padding: 10px;
     text-align: left;
-  }
-  
-  .image{
-   display: block;
-   margin-left: auto;
-   margin-right: auto;
-  }
+}
+
+.image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
