--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,4 +1,7 @@
 .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     background-color: white;
     box-shadow: 0 1px 5px -2px #a1a1a1;
     border-radius: 5px;
